v0.3.0:
  * fix ObsPy depreciation warnings
  * remove support for ObsPy<1.0
v0.2.1:
  * Q file support: The COMMENT field in the header file is now used to store
    all non-standard information. Therefore, projects using Q file format
    should be recreated.
v0.2.0:
  * new command line interface for batch processing
    - configuration file in JSON format
    - logging support (still needs some useful log messages)
    - fetch data directly from webservices
v0.1.4:
  * read_rf function added
  * new plot_rf method
  * fixed som bugs: rf is now working with obspy 0.10
  * drop direct support of obspyDMT
  * experimental batch support (work in progress)
v0.1.3:
  * lots of bugs fixed
  * major improvement of docs
  * simple_model for ppoint and move out calculation
  * major refactoring
  * bug fix: include data files when publishing on pypi
v0.1.1:
  * creation of docs with sphinx is simplified
v0.1.0:
  * initial release